# inventory-backend

./: development.db  pyproject.toml  requirements.txt
src/: config.py  db_setup.py  models.py  uow.py
src/domain/image_classification/: resnet50.py
src/entrypoints/: app.py  image.py  item.py
src/repository/: item.py
src/sql/: up.sql
tests/domain/image_classification/: test_resnet50.py
